--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
-    "sequelize": "^5.16.0"
+    "sequelize": "^5.16.0",
+    "sequelize-cli": "^5.5.0"
   }
 }
