--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "homepage": "https://github.com/MichaelM1999/resturant-tinder#readme",
   "dependencies": {
     "@mdi/font": "^4.2.95",
+    "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "nodemon": "^1.19.1",
     "sequelize": "^5.16.0"
   }
 }
