--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "resturant-tinder",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,8 +25,14 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "lodash": "^4.17.15",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.16.0"
+    "sequelize": "^5.16.0",
+    "simplebar": "^4.2.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   }
 }
