--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.16.0"
